--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,7 +5,7 @@ spring.main.allow-circular-references=true
 server.port=8080
 spring.datasource.url=jdbc:mysql://localhost:3306/linhkiendientu
 spring.datasource.username=root
-spring.datasource.password=phuc27602
+spring.datasource.password=
 
   # Hibernate properties
 spring.jpa.hibernate.ddl-auto=update
@@ -24,8 +24,8 @@ spring.security.oauth2.client.registration.facebook.scope=email,public_profile
   # Send Email
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
-spring.mail.username=123phuc27602@gmail.com
-spring.mail.password=gifuoslrgpnyluzf
+spring.mail.username=
+spring.mail.password=
 spring.mail.properties.debug=true
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
